--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.3.1",
     "@types/node": "20.11.15",
     "@types/react": "18.2.50",
     "@types/react-dom": "18.2.18",
