--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.3.1",
+    "@radix-ui/themes": "^2.0.3",
     "@types/node": "20.11.15",
     "@types/react": "18.2.50",
     "@types/react-dom": "18.2.18",
