--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
     "@prisma/client": "^5.3.1",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^2.0.3",
     "@types/node": "20.11.15",
     "@types/react": "18.2.50",
@@ -21,13 +22,16 @@
     "easymde": "^2.18.0",
     "eslint": "8.56.0",
     "eslint-config-next": "14.1.0",
+    "i": "^0.3.7",
     "next": "14.1.0",
+    "npm": "^10.4.0",
     "postcss": "8.4.33",
     "prisma": "^5.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
     "react-icons": "^4.11.0",
+    "react-loading-skeleton": "^3.4.0",
     "react-simplemde-editor": "^5.2.0",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3",
