--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-hook-form": "^7.46.1",
     "react-icons": "^4.11.0",
     "react-loading-skeleton": "^3.4.0",
+    "react-markdown": "^9.0.1",
     "react-simplemde-editor": "^5.2.0",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3",
