--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^5.3.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^2.0.3",
+    "@tanstack/react-query": "^5.18.1",
     "@types/node": "20.11.15",
     "@types/react": "18.2.50",
     "@types/react-dom": "18.2.18",
