--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "20.11.15",
     "@types/react": "18.2.50",
     "@types/react-dom": "18.2.18",
+    "@vercel/postgres": "^0.7.2",
     "autoprefixer": "10.4.17",
     "axios": "^1.5.0",
     "classnames": "^2.3.2",
